[gd_scene load_steps=4 format=3 uid="uid://b75mdud752one"]

[ext_resource type="Texture2D" uid="uid://cr7d6dy88ohwf" path="res://ui/health_bar_background.png" id="1_mtdm2"]
[ext_resource type="Script" uid="uid://bgqerrk5vpfwo" path="res://ui/user_ui.gd" id="1_xk8hf"]
[ext_resource type="Texture2D" uid="uid://cgaxlo44jh6vm" path="res://mobs/coin.png" id="3_l8eol"]

[node name="UserUI" type="Control"]
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xk8hf")

[node name="HealthBarBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.063
anchor_top = 0.105
anchor_right = 0.063
anchor_bottom = 0.105
offset_right = 384.0
offset_bottom = 18.0
mouse_filter = 2
texture = ExtResource("1_mtdm2")

[node name="HealthContainer" type="HBoxContainer" parent="HealthBarBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.095
anchor_right = 1.505
anchor_bottom = 0.105
offset_left = -801.0
offset_top = 0.400002
offset_right = -0.600098
offset_bottom = 104.6
grow_horizontal = 0
scale = Vector2(0.4, 0.4)
mouse_filter = 2
alignment = 2

[node name="CoinsLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 72
text = "asdasdsa"

[node name="CoinsLabelTexture" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_l8eol")

[node name="CoinsMarker" type="Marker2D" parent="HBoxContainer"]
unique_name_in_owner = true
position = Vector2(1712.5, 60)
